@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -22,6 +21,7 @@ import uk.gov.ons.ssdc.common.model.entity.FulfilmentSurveyExportFileTemplate;
 import uk.gov.ons.ssdc.common.model.entity.Survey;
 import uk.gov.ons.ssdc.common.model.entity.UserGroupAuthorisedActivityType;
 import uk.gov.ons.ssdc.supporttool.model.dto.ui.AllowTemplateOnSurvey;
+import uk.gov.ons.ssdc.supporttool.model.dto.ui.ExportFileTemplateDto;
 import uk.gov.ons.ssdc.supporttool.model.repository.ExportFileTemplateRepository;
 import uk.gov.ons.ssdc.supporttool.model.repository.FulfilmentSurveyExportFileTemplateRepository;
 import uk.gov.ons.ssdc.supporttool.model.repository.SurveyRepository;
@@ -54,7 +54,7 @@ public class FulfilmentSurveyExportFileTemplateEndpoint {
 
   @GetMapping
   // TODO: make this a bit more RESTful... but it does the job just fine; we don't really need a DTO
-  public List<String> getAllowedPackCodesBySurvey(
+  public List<ExportFileTemplateDto> getAllowedPackCodesBySurvey(
       @RequestParam(value = "surveyId") UUID surveyId,
       @Value("#{request.getAttribute('userEmail')}") String userEmail) {
     Survey survey =
@@ -69,8 +69,8 @@ public class FulfilmentSurveyExportFileTemplateEndpoint {
         UserGroupAuthorisedActivityType.LIST_ALLOWED_EXPORT_FILE_TEMPLATES_ON_FULFILMENTS);
 
     return fulfilmentSurveyExportFileTemplateRepository.findBySurvey(survey).stream()
-        .map(fspt -> fspt.getExportFileTemplate().getPackCode())
-        .collect(Collectors.toList());
+        .map(fspt -> new ExportFileTemplateDto(fspt.getExportFileTemplate()))
+        .toList();
   }
 
   @PostMapping
